@@ -67,6 +67,7 @@ AM_GNU_GETTEXT([external])
 
 AC_OUTPUT([
 Makefile
+gtetrinet.desktop
 doc/Makefile
 po/Makefile.in
 src/Makefile
